# distributed-timer

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs  timesync.md
.github/workflows/: release.yml
client/: package-lock.json  package.json  svelte.config.js
client/src/: app.postcss  stores.ts  theme.postcss
client/src/routes/: +layout.svelte  +page.svelte  +page.ts
client/src/routes/manage/: +layout.svelte
client/src/routes/manage/[id]/: +page.svelte  +page.ts  TimerForm.svelte
client/src/routes/manage/create/: +page.svelte  +page.ts  CreateTimerForm.svelte
client/src/routes/manage/login/: +page.svelte  LoginForm.svelte
client/src/routes/t/[timerId]/: +page.svelte  +page.ts  Timer.svelte
client/src/types/: instanceProperties.ts  segment.ts  timer.ts
display/: platformio.ini  upload_script.py
display/include/: advent_pro_regular.h  display.h  socket.h  timer.h  wifi.h
display/src/: display.cpp  main.cpp  socket.cpp  timer.cpp  wifi.cpp
scripts/: k6.js  websocket.js  websockettest.html
src/: color.rs  main.rs  models.rs  repository.rs
src/redis_migrations/: display_options.rs  mod.rs  pre_start_behaviour.rs  segment.rs  sound.rs  tests.rs  timer.rs  timer_metadata.rs
src/routes/: client.rs  instance.rs  mod.rs  stats.rs  timer.rs  web.rs  ws.rs
web/: package-lock.json  package.json  svelte.config.js
web/src/: app.html  app.postcss  stores.ts
web/src/components/: HelpPopup.svelte
web/src/routes/: +layout.svelte  +page.svelte  +page.ts  DonationButton.svelte
web/src/routes/manage/: +layout.svelte
web/src/routes/manage/[id]/: +layout.svelte  +page.svelte  +page.ts  SegmentDetailsForm.svelte  SegmentForm.svelte  SegmentInfoBox.svelte  TimeInputField.svelte  TimerForm.svelte  helpers.ts
web/src/routes/manage/create/: +page.svelte  +page.ts  (+1 more)
web/src/types/: displayOptions.ts  fetch.ts  segment.ts  timer.ts  timerMetadata.ts
web/src/utils/: api.ts  sounds.ts  timer.ts
(+13 files in other folders)
