[package]
name = "boulder-timer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.9", features = ["ws", "headers"] }
futures = "0.3"
tower = { version = "0.4", features = ["util"] }
redis = "0.22.3"
tokio = { version = "1.25.0", features = ["full"] }
