[package]
name = "boulder-timer"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.9", features = ["ws", "headers"] }
futures = "0.3"
tower = { version = "0.4", features = ["util"] }
redis = { version = "0.22.3", features = ["aio", "tokio-comp", "connection-manager"] }
tokio = { version = "1.25.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs", "full"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
hex = "0.4.3"
argon2 = "0.4.1"
axum-macros = "0.3.4"
tracing = "0.1.37"
jsonwebtoken = "8.2.0"
tower-service = "0.3.2"
rust-embed = "6.6.0"
mime_guess = "2.0.4"
regex = "1.7.1"
